fix(Collapse): fix collapse height
closes #3205

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -96,6 +96,10 @@
 
     &_divider {
       border-bottom: 1px solid var(--color-bg-border);
+
+      &:not(.Collapse-Body_isOpen) {
+        margin-top: -1px;
+      }
     }
   }
 
